Integrate Resilience4j for resilience patterns in DroneServiceImpl